--- a/app/src/PracticeView.css
+++ b/app/src/PracticeView.css
@@ -1,45 +1,80 @@
+.Practice-view-title{
+    color: #707070;
+}
+
 .Name-Card{
-    background-color:#ACE0F8;
+    width: 200px;
+    height: 50px;
+    padding-top: 10px;
+    text-align: center;
+    background-color:hsl(199, 84%, 82%);
     color:#707070;
 }
 .Next-Session-Date{
+    width: 200px;
+    height: 50px;
+    padding-top: 10px;
+    text-align: center;
     background-color:#ACE0F8;
     color:#707070;
 }
 .Status{
+    width: 200px;
+    height: 50px;
+    padding-top: 10px;
+    text-align: center;
     background-color:#ACE0F8;
     color:#707070;
 }
 .Client-View-Button{
+    width: 200px;
+    height: 50px;
+    padding-top: 10px;
+    text-align: center;
     background-color:#ACE0F8;
     color:#707070;
 }
-.Name-Card{
-    height: 200%;
+
+.Profile-info{
+    padding-top: 50px;
 }
-.App-logo{
+
+.picture{
     border:none;
     max-width: 50%;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
+
 .Name-Row{
+    padding-top: 20px;
     bottom:-20px;
     padding-bottom: 20px;
     
 }
 .Next-Session-Row{
-    top:-20px;
-    padding-bottom:20px;
-    
+    top:-20px;    
 }
 .Table{
-  border-collapse: separate;
-  border-spacing: 0 15px;
+    border-collapse: separate;
+    border-spacing: 20px 45px;
+    margin-left: 50px;
 }
+
+.Patient-name{
+    width: 250px;
+    height: auto;
+}
+
+.Tab{
+    margin-left: 175px;
+}
+
 .Profile{
-margin-top:20px; 
+    margin-top:20px;
+    float: left;
 }
 .border{
     border-style:solid;
+    padding-bottom: 175px;
    
 }
