--- a/app/src/css/ExerciseForm.css
+++ b/app/src/css/ExerciseForm.css
@@ -8,6 +8,7 @@
     position: absolute;
     top: 25%;
     width: 100%; 
+    z-index: -2;
 }
 
 .background{
@@ -44,6 +45,7 @@
     width: 625px;
     height: 650px;
     top: 15px;
+    text-align: center;
 }
 
 .Added-exercise-list{
