--- a/app/src/css/ClientView.css
+++ b/app/src/css/ClientView.css
@@ -1,14 +1,106 @@
+.Assignment-completion-body{
+    float: right;
+    width: 87%;
+    height: 100%;
+    top: 39%;
+    right: 4%;
+    overflow:scroll
+}
+
+.Assignment-completion-status-text{
+    color:#3D8FB4;
+}
+
+.Assignment-completion-status-text-container{
+    position: absolute;
+    padding-top: 2%;
+    left: 6%;
+}
+
+.Assignment-completion-title-text{
+    color: #707070;
+}
+
+.Assignment-due-date-container{
+    position: absolute;
+    padding-top: 2%;
+    
+}
+
+.Assignment-progress-container{
+    position: absolute;
+    padding-top: 15%;
+    left: 6%;
+}
+
+.background{
+    background-color: #346B7A;
+    position: relative;
+    padding-bottom: 1.5%;
+    z-index: -1;
+  }
+
+.background-container{
+    position: absolute;
+    top: 25%;
+    width: 100%;
+    z-index: -2;
+}
+
+.clientInfoCard{
+    padding: 2%;
+}
+
+.clientInfoCardContainer{
+    text-align: center;
+    padding-top: 5%;
+    width: 35%;
+}
+
+.Client-information{
+    align-items: center;
+    width: 100%;
+    height: 70%;
+    top: 80px;
+    left: 15%;
+}
+
+.Client-information-container{
+    width: 25%;
+    height: 650px;
+}
+
 .Client-view-title-container{
     position: absolute;
     top: 6.5%;
     left: 9%
 }
 
-.background-container{
-    position: absolute;
-    top: 25%;
-    width: 100%;
-    z-index: -2; 
+.Client-view-title-text{
+    position: relative;
+    color: #707070;
+    font: Nunito; 
+    font-size: 45px;
+    font-weight: 500;
+}
+
+.Exercise-data{
+    width: 785%;
+    /* NEED THE COLORS TO MATCH (bubbles and bars)*/
+}
+
+.Exercise-data-container{
+    padding-top: 15%;
+    padding-left: 5%;
+    
+}
+
+.picture{
+    padding-top: 5%;
+}
+
+.Progress-bubbles{
+    padding-left: 5%;
 }
 
 .Progress-bubbles-container{
@@ -20,90 +112,3 @@
     flex-direction: row;
     z-index: 20;
 }
-.Progress-bubbles{
-    padding-left: 5%;
-}
-
-.background{
-    background-color: #346B7A;
-    position: relative;
-    padding-bottom: 1.5%;
-    z-index: -1;
-  }
-
-.Client-view-title-text{
-    position: relative;
-    color: #707070;
-    font: Nunito; 
-    font-size: 45px;
-    font-weight: 500;
-}
-.Client-information-container{
-    width: 25%;
-    height: 650px;
-}
-.Client-information{
-    align-items: center;
-    width: 100%;
-    height: 70%;
-    top: 80px;
-    left: 15%;
-}
-.clientInfoCardContainer{
-    text-align: center;
-    padding-top: 5%;
-    width: 35%;
-}
-.picture{
-    padding-top: 5%;
-}
-.clientInfoCard{
-    padding: 2%;
-}
-.Assignment-completion-body{
-    float: right;
-    width: 87%;
-    height: 100%;
-    top: 39%;
-    right: 4%;
-}
-.Assignment-completion-status-text-container{
-    position: absolute;
-    padding-top: 2%;
-    left: 6%;
-}
-
-.Assignment-due-date-container{
-    position: absolute;
-    padding-top: 2%;
-    
-}
-
-.Assignment-completion-status-text{
-    color:#3D8FB4;
-}
-
-.Assignment-progress-container{
-    position: absolute;
-    padding-top: 15%;
-    left: 6%;
-}
-
-.Assignment-completion-title-text{
-    color: #707070;
-}
-
-.Exercise-data-container{
-    padding-top: 15%;
-    padding-left: 5%;
-    
-}
-
-.Exercise-data{
-    width: 785%;
-    /* NEED THE COLORS TO MATCH (bubbles and bars)*/
-}
-
-
-
-
