--- a/app/src/css/ClientView.css
+++ b/app/src/css/ClientView.css
@@ -2,7 +2,7 @@
     float: right;
     width: 87%;
     height: 100%;
-    top: 39%;
+    top: 30%;
     right: 4%;
     overflow:scroll
 }
@@ -99,16 +99,33 @@
     padding-top: 5%;
 }
 
-.Progress-bubbles{
+.Progress-bubbles {
     padding-left: 5%;
+    padding-bottom: 20%;
+    
 }
 
-.Progress-bubbles-container{
+
+.Progress-bubble-column {
+    padding-left: 6%;
+    bottom: 10%;
+}
+
+.Progress-bubble-column-hidden {
+    opacity: 0;
+    padding-left: 6%;
+    bottom: 10%;
+}
+
+
+
+.Progress-bubbles-container {
     position: absolute;
+    height: 50%;
     top: 5%;
     width: 80%;
     left: 10%;
+    z-index: 20;
     display: flex;
     flex-direction: row;
-    z-index: 20;
 }
