Complete assignment button

--- a/app/src/css/ClientView.css
+++ b/app/src/css/ClientView.css
@@ -47,6 +47,11 @@
     z-index: -2;
 }
 
+/* z-index value has to be higher than .Progress-bubbles-container */
+.clickMe {
+    z-index: 25;
+}
+
 .clientInfoCard{
     padding: 2%;
 }
@@ -84,6 +89,10 @@
     font-weight: 500;
 }
 
+.complete-assignment-button-div {
+    z-index: 25;
+}
+
 .Exercise-data{
     width: 785%;
     /* NEED THE COLORS TO MATCH (bubbles and bars)*/
@@ -108,7 +117,6 @@
 
 .Progress-bubble-column {
     padding-left: 6%;
-    bottom: 10%;
 }
 
 .Progress-bubble-column-hidden {
